Fixing issue with buttons being too large due vertical to content fit

--- a/src/markup/css/default.css
+++ b/src/markup/css/default.css
@@ -392,6 +392,7 @@ button {
 	font-size: 16px;
 	text-align: center;
 	background-color: #CCC;
+	overflow: hidden;
 }
 button:hover {
 	background-color: #AAA;
